<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/creditsHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/credits"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/creditsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/textview"
            app:layout_constraintStart_toEndOf="@+id/creditsHead"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/subscriptionHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="20dp"
            android:text="@string/subscription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/subscriptionStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/subscriptionStatusText"
            app:layout_constraintStart_toEndOf="@+id/subscriptionHead"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/itemCancel"
            android:layout_width="229dp"
            android:layout_height="61dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="44dp"
            android:text="@string/checkAndCancelOffering"
            android:textColor="#757575"
            app:layout_constraintStart_toEndOf="@+id/creditsCount"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/goToProfileActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"
            android:text="@string/goToProfileActivity"
            android:textColor="#757575"
            app:layout_constraintEnd_toStartOf="@+id/itemCancel"
            app:layout_constraintTop_toBottomOf="@+id/creditsHead" />

        <TextView
            android:id="@+id/itemDescriptionPremiumOffering"
            android:layout_width="199dp"
            android:layout_height="102dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="100dp"
            android:text="@string/textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemNamePremiumOffering" />

        <TextView
            android:id="@+id/itemNamePremiumOffering"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/textview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemCancel" />


        <Button
            android:id="@+id/itemPricePremiumOffering"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="160dp"
            android:text="@string/button"
            android:textColor="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemDescriptionPremiumOffering" />

        <TextView
            android:id="@+id/itemDescriptionLiteOffering"
            android:layout_width="199dp"
            android:layout_height="102dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="100dp"
            android:text="@string/textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemNameLiteOffering" />

        <TextView
            android:id="@+id/itemNameLiteOffering"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/textview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemPricePremiumOffering" />

        <Button
            android:id="@+id/itemPriceLiteOffering"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="160dp"
            android:text="@string/button"
            android:textColor="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemDescriptionLiteOffering" />

        <TextView
            android:id="@+id/itemDescription"
            android:layout_width="199dp"
            android:layout_height="102dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="100dp"
            android:text="@string/textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemName" />

        <TextView
            android:id="@+id/itemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/textview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemPriceLiteOffering" />

        <Button
            android:id="@+id/itemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="160dp"
            android:text="@string/button"
            android:textColor="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemDescription" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
